--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
         <div id="sandwich-nav" class="nav-display">
             <i class="gg-menu-boxed icon"></i>
-            <img class="logo-container" src="imgs/logo.svg">
+            <img class="logo-container" title="Logótipo da Spoticar" alt="Logótipo da Spoticar" src="imgs/logo.svg">
             <i class="gg-user icon"></i>
         </div>
         <div id="normal-nav" class="nav-display">
-            <img class="logo-container" src="imgs/logo.svg">
+            <img class="logo-container" title="Logótipo da Spoticar" alt="Logótipo da Spoticar" src="imgs/logo.svg">
             <nav>
                 <ul>
                     <li>
@@ -61,14 +61,16 @@
             <button type="button" class="car-btn-left">&lt;</button>
             <button type="button" class="car-btn-right">&gt;</button>
             <div>
-                <img src="imgs/carrossel/Spoticar_Portugal-allbrands_desktop.jpeg">
+                <img title="Imagem do Slideshow #1" alt="Vários carros fotografados em fila."
+                    src="imgs/carrossel/Spoticar_Portugal-allbrands_desktop.jpeg">
                 <div id="text_img1">
                     <p><strong>SPOTICAR</strong><br><br>OS CARROS USADOS DAS REDES ABARTH, CITROEN, FIAT, JEEP E PEUGEOT
                     </p>
                     <p><span id="_1">COMPRAR</span> ou <span id="_2">VENDER</span></p>
                 </div>
-                <img src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Fiat_1650x430.jpeg">
-                <img
+                <img title="Imagem do Slideshow #2" alt="Dois carros FIAT colocados lado a lado."
+                    src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Fiat_1650x430.jpeg">
+                <img title="Imagem do Slideshow #3" alt="Imagem de um CITROEN."
                     src="imgs/carrossel/ap_Spoticar_updates-dezembro_heroshot- homepage_a01_Citroen-C5-Aircross_1650x430 .jpeg">
             </div>
         </div>
@@ -97,8 +99,10 @@
             </ul>
         </div>
         <div>
-            <img id="brand-banner" src="imgs/banner/banner_desktop_marcas.jpg">
-            <img id="brand-banner-media" src="imgs/banner/banner_mobile_marcas.jpeg">
+            <img title="Imagem com Várias Marcas de Automóveis" alt="Imagem com Várias Marcas de Automóveis"
+                id="brand-banner" src="imgs/banner/banner_desktop_marcas.jpg">
+            <img title="Imagem com Várias Marcas de Automóveis" alt="Imagem com Várias Marcas de Automóveis"
+                id="brand-banner-media" src="imgs/banner/banner_mobile_marcas.jpeg">
         </div>
         <div id="interim-info">
             <h2>PESQUISE E RESERVE ON-LINE</h2>
@@ -114,19 +118,19 @@
         <div id="compromises-info">
             <h2><a>COMPROMISSOS DO SITE</a></h2>
             <ul>
-                <li><img src="imgs/icons/check.png">
+                <li><img title="Ícone #1" alt="Ícone de um símbolo de confirmação." src="imgs/icons/check.png">
                     <p>SATISFAÇÃO OU REEMBOLSO</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/car.png">
+                    <img title="Ícone #2" alt="Ícone de um automóvel." src="imgs/icons/car.png">
                     <p>REDE DE ASSISTÊNCIA NACIONAL</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/cell.png">
+                    <img title="Ícone #3" alt="Ícone de um telefone." src="imgs/icons/cell.png">
                     <p>ASSISTÊNCIA EM VIAGEM</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/calc.png">
+                    <img title="Ícone #4" alt="Ícone de uma calculadora." src="imgs/icons/calc.png">
                     <p>FINANCIAMENTO PERSONALIZADO</p>
                 </li>
             </ul>
@@ -138,27 +142,27 @@
             <h2>OPORTUNIDADES SELECIONADAS POR CATEGORIA</h2>
             <ul>
                 <li>
-                    <img src="imgs/icons/1.png">
+                    <img title="Ícone #1" alt="Ícone de uma medalha." src="imgs/icons/1.png">
                     <p>OPORTUNIDADES PREMIUM</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/2.png">
+                    <img title="Ícone #2" alt="Ícone de um euro." src="imgs/icons/2.png">
                     <p>OPORTUNIDADES PREÇOS BAIXOS</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/3.png">
+                    <img title="Ícone #3" alt="Ícone de um euro." src="imgs/icons/3.png">
                     <p>USADOS EM CAMPANHA</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/4.png">
+                    <img title="Ícone #4" alt="Ícone de transporte de mercadoria." src="imgs/icons/4.png">
                     <p>COMERCIAIS USADOS</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/5.png">
+                    <img title="Ícone #5" alt="Ícone de uma ficha." src="imgs/icons/5.png">
                     <p>OPORTUNIDADES ELÉTRICAS</p>
                 </li>
                 <li>
-                    <img src="imgs/icons/6.png">
+                    <img title="Ícone #6" alt="Ícone de um automóvel híbrido." src="imgs/icons/6.png">
                     <p>OPORTUNIDADES HÍBRIDAS</p>
                 </li>
             </ul>
@@ -175,7 +179,8 @@
             <div class="cars">
                 <ul id="first-car">
                     <li>COMPARAR</li>
-                    <li><img id="_1st" src="imgs/for_sale/PEUGEOT-108-202617_1.jpeg"></li>
+                    <li><img title="Imagem de um carro." alt="Imagem de um carro." id="_1st"
+                            src="imgs/for_sale/PEUGEOT-108-202617_1.jpeg"></li>
                     <li>GARANTIA 36 MESES</li>
                     <li>PEUGEOT 108</li>
                     <li>1 1.0 VTI 72 CVM5 STYLE</li>
@@ -183,7 +188,7 @@
                     <li>06-2021 | Manual</li>
                     <li>WLTP</li>
                     <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
-                    <li><img src="imgs/icons/A.png" width="50px" height="15px"></li>
+                    <li><img title="Ícone de A" alt="Ícone de A" src="imgs/icons/A.png" width="50px" height="15px"></li>
                 </ul>
                 <ul id="first-car-end">
                     <li>13 980 €</li>
@@ -193,7 +198,8 @@
             <div class="cars">
                 <ul id="snd-car">
                     <li>COMPARAR</li>
-                    <li><img id="_2st" src="imgs/for_sale/PEUGEOT-108-202579_1.jpeg"></li>
+                    <li><img title="Imagem de um Carro" alt="Imagem de um Carro" id="_2st"
+                            src="imgs/for_sale/PEUGEOT-108-202579_1.jpeg"></li>
                     <li>GARANTIA 36 MESES</li>
                     <li>PEUGEOT 108</li>
                     <li>1 1.0 VTI 72 CVM5 STYLE</li>
@@ -201,7 +207,7 @@
                     <li>06-2021 | Manual</li>
                     <li>WLTP</li>
                     <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
-                    <li><img src="imgs/icons/B.png" width="50px" height="15px"></li>
+                    <li><img title="Ícone de B" alt="Ícone de B" src="imgs/icons/B.png" width="50px" height="15px"></li>
                 </ul>
                 <ul id="snd-car-end">
                     <li>13 980 €</li>
@@ -211,7 +217,8 @@
             <div class="cars">
                 <ul id="trd-car">
                     <li>COMPARAR</li>
-                    <li><img id="_3st" src="imgs/for_sale/PEUGEOT-108-202617_1.jpeg"></li>
+                    <li><img id="_3st" title="Imagem de um Carro" alt="Imagem de um Carro"
+                            src="imgs/for_sale/PEUGEOT-108-202617_1.jpeg"></li>
                     <li>GARANTIA 36 MESES</li>
                     <li>PEUGEOT 108</li>
                     <li>1 1.0 VTI 72 CVM5 STYLE</li>
@@ -219,7 +226,7 @@
                     <li>06-2021 | Manual</li>
                     <li>WLTP</li>
                     <li>Consumo misto 4.9l/100 km<br>CO2 misto 110 g/km</li>
-                    <li><img src="imgs/icons/A.png" width="50px" height="15px"></li>
+                    <li><img title="Ícone de A" alt="Ícone de A" src="imgs/icons/A.png" width="50px" height="15px"></li>
                 </ul>
                 <ul id="trd-car-end">
                     <li>13 980 €</li>
@@ -341,7 +348,8 @@
         </div>
         <div>
             <div class="banner1">
-                <img src="imgs/banner/SUV1_banner_pre-footer1.jpeg" class="banner">
+                <img title="Imagem de Carros" alt="Imagem de carros." src="imgs/banner/SUV1_banner_pre-footer1.jpeg"
+                    class="banner">
                 <div class="centered">O SEU SUV USADO
                     <br><br>
                     <p>COMO ESCOLHER BEM O SEU SUV USADO</p>
@@ -349,7 +357,8 @@
                 <div class="centered-bottom">LEIA MAIS</div>
             </div>
             <div class="banner1">
-                <img src="imgs/banner/Occ_banner_pre-footer2.jpeg" class="banner">
+                <img title="Imagem de uma Criança" alt="Imagem de uma criança."
+                    src="imgs/banner/Occ_banner_pre-footer2.jpeg" class="banner">
                 <div class="centered">
                     <p>PARA CONSEGUIR ENCONTRAR A MELHOR OFERTA, SIGA OS NOSSO CONSELHOS PARA A COMPRA!</p>
                 </div>
@@ -364,10 +373,11 @@
                 DESCUBRA TAMBÉM...
             </h2>
             <ul id="li2col1" class="discover-column">
-                <br>
+                <li></li>
                 <li>
                     Categorias
-                </li><br>
+                </li>
+                <li></li>
                 <li class="content">
                     <ul>
                         <li>SUV's e 4x4</li>
