--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     </li>
                 </ul>
             </nav>
+        </div>
     </header>
     <main>
         <div class="carrossel">
@@ -112,7 +113,7 @@
             <p><sup>1</sup> Nos concessionários aderentes.</p>
         </div>
         <div id="compromises-info">
-            <h2><a>COMPROMISSOS DO SITE</a></h2>
+            <h2>COMPROMISSOS DO SITE</h2>
             <ul>
                 <li><img src="imgs/icons/check.png">
                     <p>SATISFAÇÃO OU REEMBOLSO</p>
