--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
             <h2 id="li5col1">
                 MARCAS
             </h2>
-            <ul id="li6col1">
+            <ul id="li6col1" id="open-menu-querie">
                 <li>
                     OPEL USADOS
                 </li><br>
@@ -487,7 +487,7 @@
                 <li>Mokka</li>
                 <li>Outros Modelos</li>
             </ul>
-            <ul id="li6col2">
+            <ul id="li6col2" id="open-menu-querie">
                 <li>
                     CITROEN USADOS
                 </li><br>
@@ -499,7 +499,7 @@
                 <li>Berlingo</li>
                 <li>Outros Modelos</li>
             </ul>
-            <ul id="li6col3">
+            <ul id="li6col3" id="open-menu-querie">
                 <li>
                     PEUGOT USADOS
                 </li><br>
@@ -511,7 +511,7 @@
                 <li>Partener</li>
                 <li>Outros Modelos</li>
             </ul>
-            <ul id="li6col4">
+            <ul id="li6col4" id="open-menu-querie">
                 <li>
                     DS AUTOMOBILES USADOS
                 </li><br>
@@ -520,7 +520,7 @@
                 <li>DS4</li>
                 <li>DS9</li>
             </ul>
-            <ul id="li6col5">
+            <ul id="li6col5" id="open-menu-querie">
                 <li>
                     FIAT USADOS
                 </li><br>
@@ -532,13 +532,13 @@
                 <li>Talento</li>
                 <li>Outros Modelos</li>
             </ul>
-            <ul id="li6col6">
+            <ul id="li6col6" id="open-menu-querie">
                 <li>
                     VOLKSWAGEN
                 </li><br>
                 <li>Sem resultados</li>
             </ul>
-            <ul id="li7col1">
+            <ul id="li7col1" id="open-menu-querie">
                 <li>
                     RENAUT
                 </li><br>
@@ -548,14 +548,14 @@
                 <li>Clio</li>
                 <li>Grand Scenic</li>
             </ul>
-            <ul id="li7col2">
+            <ul id="li7col2" id="open-menu-querie">
                 <li>
                     NISSAN
                 </li><br>
                 <li>Qashqai</li>
                 <li>X-Trail</li>
             </ul>
-            <ul id="li7col3">
+            <ul id="li7col3" id="open-menu-querie">
                 <li>
                     KIA
                 </li><br>
@@ -564,14 +564,14 @@
                 <li>Sportage</li>
                 <li>Stonic</li>
             </ul>
-            <ul id="li7col4">
+            <ul id="li7col4" id="open-menu-querie">
                 <li>
                     FORD
                 </li><br>
                 <li>Fiesta</li>
                 <li>Toumeo</li>
             </ul>
-            <ul id="li7col5">
+            <ul id="li7col5" id="open-menu-querie">
                 <li>
                     SEAT
                 </li><br>
@@ -579,7 +579,7 @@
                 <li>Ibiza</li>
                 <li>Leon</li>
             </ul>
-            <ul id="li7col6" class="brands">
+            <ul id="li7col6" class="brands" id="open-menu-querie">
                 <li>
                     OUTRAS MARCAS
                 </li><br>
