--- a/index.html
+++ b/index.html
@@ -604,6 +604,7 @@
             <li>Política de Privacidade</li>
         </ul>
     </footer>
+    <img id="chat" src="imgs/icons/chat-icon.png">
     <script src="script.js" defer></script>
 </body>
 
