--- a/index.html
+++ b/index.html
@@ -11,41 +11,74 @@
 
 <body>
     <header>
-        <div id="sandwich-nav" class="nav-display">
-            <i class="gg-menu-boxed icon"></i>
-            <img class="logo-container" title="Logótipo da Spoticar" alt="Logótipo da Spoticar" src="imgs/logo.svg">
-            <i class="gg-user icon"></i>
+        <div id="sandwich-nav">
+            <div>
+                <button class="menu-button icon" type="button"><i class="gg-menu-boxed"></i></button>
+                <img class="logo-container" title="Logótipo da Spoticar" alt="Logótipo da Spoticar" src="imgs/logo.svg">
+                <i class="gg-user icon"></i>
+            </div>
+            <ul>
+                <li>
+                    ENCONTRAR UMA VIATURA
+                </li>
+                <li>
+                    CAMPANHAS
+                </li>
+                <li>
+                    COMERCIAIS USADOS
+                </li>
+                <li>
+                    ELÉTRICOS E HIBRIDOS USADOS
+                </li>
+                <li>
+                    RETOMA
+                </li>
+                <li>
+                    OS NOSSOS PONTOS DE VENDA
+                </li>
+                <li>
+                    QUEM SOMOS
+                </li>
+                <li>
+                    VÍDEOS
+                </li>
+                <li>
+                    GUIA DO COMPRADOR
+                </li>
+                <li>
+                    A MINHA SELEÇÃO
+                </li>
         </div>
-        <div id="normal-nav" class="nav-display">
+        <div id="normal-nav">
             <img class="logo-container" title="Logótipo da Spoticar" alt="Logótipo da Spoticar" src="imgs/logo.svg">
             <nav>
                 <ul>
                     <li>
-                        ENCONTRAR UMA VIATURA
+                        ENCONTRAR UMA<br>VIATURA
                     </li>
                     <li>
                         CAMPANHAS
                     </li>
                     <li>
-                        COMERCIAIS USADOS
+                        COMERCIAIS<br>USADOS
                     </li>
                     <li>
-                        ELÉTRICOS E HIBRIDOS USADOS
+                        ELÉTRICOS E HIBRIDOS<br>USADOS
                     </li>
                     <li>
                         RETOMA
                     </li>
                     <li>
-                        OS NOSSOS PONTOS DE VENDA
+                        OS NOSSOS PONTOS DE<br>VENDA
                     </li>
                     <li>
-                        QUEM SOMOS
+                        QUEM<br>SOMOS
                     </li>
                     <li>
                         VÍDEOS
                     </li>
                     <li>
-                        GUIA DO COMPRADOR
+                        GUIA DO<br>COMPRADOR
                     </li>
                     <li class="nav-separator">
                         |
@@ -247,7 +280,7 @@
                         <option value="mercedes">Mercedes</option>
                         <option value="audi">Audi</option>
                         <option value="bmw">BMW</option>
-                        <option value="volkswagen">Volkswagen</option>
+                        <option value="wv">Volkswagen</option>
                     </select>
                     <span class="model-select">
                         <label for="model">Modelo</label>
