--- a/index.html
+++ b/index.html
@@ -124,7 +124,20 @@
         <div id="search-mediaq">
             <ul>
                 <li>ENCONTRE O SEU CARRO USADO</li>
-                <li>PESQUISA RÁPIDA</li>
+                <li><button type="button">PESQUISA RÁPIDA</button>
+                    <div id="search-sandwich">
+                        <ul>
+                            <li>MARCA/MODELO</li>
+                            <li>CATEGORIA</li>
+                            <li>COMBUSTíVEL</li>
+                            <li>PREÇO</li>
+                            <li>QUILOMOTRAGEM</li>
+                            <li>LOCALIZAÇÃO</li>
+                            <li>ANO</li>
+                            <li>VER RESULTADOS</li>
+                        </ul>
+                    </div>
+                </li>
                 <li>PESQUISA AVANÇADA</li>
                 <li></li>
                 <li></li>
