--- a/index.html
+++ b/index.html
@@ -122,28 +122,23 @@
             </ul>
         </div>
         <div id="search-mediaq">
-            <ul>
-                <li>ENCONTRE O SEU CARRO USADO</li>
-                <li><button type="button">PESQUISA RÁPIDA</button>
-                    <div id="search-sandwich">
-                        <ul>
-                            <li>MARCA/MODELO</li>
-                            <li>CATEGORIA</li>
-                            <li>COMBUSTíVEL</li>
-                            <li>PREÇO</li>
-                            <li>QUILOMOTRAGEM</li>
-                            <li>LOCALIZAÇÃO</li>
-                            <li>ANO</li>
-                            <li>VER RESULTADOS</li>
-                        </ul>
-                    </div>
-                </li>
-                <li>PESQUISA AVANÇADA</li>
-                <li></li>
-                <li></li>
-                <li>VER TODAS AS OFERTAS</li>
-                <li>VER VIATURAS</li>
-            </ul>
+                <p>ENCONTRE O SEU CARRO USADO</p>                    
+                <div id="search-sandwich">
+                    <button type="button">PESQUISA RÁPIDA</button>
+                    <ul>
+                        <li>MARCA/MODELO</li>
+                        <li>CATEGORIA</li>
+                        <li>COMBUSTíVEL</li>
+                        <li>PREÇO</li>
+                        <li>QUILOMOTRAGEM</li>
+                        <li>LOCALIZAÇÃO</li>
+                        <li>ANO</li>
+                        <li>VER RESULTADOS</li>
+                    </ul>
+                </div>
+                <p>PESQUISA AVANÇADA</p>
+                <p>VER TODAS AS OFERTAS</p>
+                <p>VER VIATURAS</p>
         </div>
         <div>
             <img title="Imagem com Várias Marcas de Automóveis" alt="Imagem com Várias Marcas de Automóveis"
