mega zé dos zés, rei da zélandia

--- a/index.html
+++ b/index.html
@@ -122,23 +122,23 @@
             </ul>
         </div>
         <div id="search-mediaq">
-                <p>ENCONTRE O SEU CARRO USADO</p>                    
-                <div id="search-sandwich">
-                    <button type="button">PESQUISA RÁPIDA</button>
-                    <ul>
-                        <li>MARCA/MODELO</li>
-                        <li>CATEGORIA</li>
-                        <li>COMBUSTíVEL</li>
-                        <li>PREÇO</li>
-                        <li>QUILOMOTRAGEM</li>
-                        <li>LOCALIZAÇÃO</li>
-                        <li>ANO</li>
-                        <li>VER RESULTADOS</li>
-                    </ul>
-                </div>
-                <p>PESQUISA AVANÇADA</p>
-                <p>VER TODAS AS OFERTAS</p>
-                <p>VER VIATURAS</p>
+            <p>ENCONTRE O SEU CARRO USADO</p>
+            <div id="search-sandwich">
+                <button type="button">PESQUISA RÁPIDA</button>
+                <ul>
+                    <li>MARCA/MODELO</li>
+                    <li>CATEGORIA</li>
+                    <li>COMBUSTíVEL</li>
+                    <li>PREÇO</li>
+                    <li>QUILOMOTRAGEM</li>
+                    <li>LOCALIZAÇÃO</li>
+                    <li>ANO</li>
+                    <li>VER RESULTADOS</li>
+                </ul>
+            </div>
+            <button type="button">PESQUISA AVANÇADA</button>
+            <button type="button">VER TODAS AS OFERTAS</button>
+            <button type="button">VER VIATURAS</button>
         </div>
         <div>
             <img title="Imagem com Várias Marcas de Automóveis" alt="Imagem com Várias Marcas de Automóveis"
