zeeeeeeeeeeeeeeeee já estáaaaaaaaaaaaa

--- a/index.html
+++ b/index.html
@@ -516,120 +516,156 @@
                 MARCAS
             </h2>
             <ul id="li6col1" id="open-menu-querie">
-                <li>
-                    OPEL USADOS
-                </li><br>
-                <li>Astra</li>
-                <li>Corsa</li>
-                <li>Grandland</li>
-                <li>Crossland</li>
-                <li>Insignia</li>
-                <li>Mokka</li>
-                <li>Outros Modelos</li>
+                <span>
+                    <li>
+                        <button type="button">OPEL USADOS</button>
+                    </li>
+                    <li></li>
+                    <li>Astra</li>
+                    <li>Corsa</li>
+                    <li>Grandland</li>
+                    <li>Crossland</li>
+                    <li>Insignia</li>
+                    <li>Mokka</li>
+                    <li>Outros Modelos</li>
+                </span>
             </ul>
             <ul id="li6col2" id="open-menu-querie">
-                <li>
-                    CITROEN USADOS
-                </li><br>
-                <li>C4</li>
-                <li>C5 Aircross</li>
-                <li>C3</li>
-                <li>C4 Cactus</li>
-                <li>C3 Aircross</li>
-                <li>Berlingo</li>
-                <li>Outros Modelos</li>
+                <span>
+                    <li>
+                        <button type="button">DS USADOS</button>
+                    </li>
+                    <li></li>
+                    <li>C4</li>
+                    <li>C5 Aircross</li>
+                    <li>C3</li>
+                    <li>C4 Cactus</li>
+                    <li>C3 Aircross</li>
+                    <li>Berlingo</li>
+                    <li>Outros Modelos</li>
+                </span>
             </ul>
             <ul id="li6col3" id="open-menu-querie">
-                <li>
-                    PEUGOT USADOS
-                </li><br>
-                <li>308</li>
-                <li>2008</li>
-                <li>208</li>
-                <li>3008</li>
-                <li>508</li>
-                <li>Partener</li>
-                <li>Outros Modelos</li>
+                <span>
+                    <li>
+                        <button type="button">PEUGOT USADOS</button>
+                    </li>
+                    <li></li>
+                    <li>308</li>
+                    <li>2008</li>
+                    <li>208</li>
+                    <li>3008</li>
+                    <li>508</li>
+                    <li>Partener</li>
+                    <li>Outros Modelos</li>
+                </span>
             </ul>
             <ul id="li6col4" id="open-menu-querie">
-                <li>
-                    DS AUTOMOBILES USADOS
-                </li><br>
-                <li>DS7 Crossback</li>
-                <li>DS3 Crossback</li>
-                <li>DS4</li>
-                <li>DS9</li>
+                <span>
+                    <li>
+                        <button type="button">AUTOMOBILES USADOS</button>
+                    </li>
+                    <li></li>
+                    <li>DS7 Crossback</li>
+                    <li>DS3 Crossback</li>
+                    <li>DS4</li>
+                    <li>DS9</li>
+                </span>
             </ul>
             <ul id="li6col5" id="open-menu-querie">
-                <li>
-                    FIAT USADOS
-                </li><br>
-                <li>500</li>
-                <li>Doblo</li>
-                <li>Punto</li>
-                <li>Panda</li>
-                <li>Tipo</li>
-                <li>Talento</li>
-                <li>Outros Modelos</li>
+                <span>
+                    <li>
+                        <button type="button">USADOS</button>
+                    </li>
+                    <li></li>
+                    <li>500</li>
+                    <li>Doblo</li>
+                    <li>Punto</li>
+                    <li>Panda</li>
+                    <li>Tipo</li>
+                    <li>Talento</li>
+                    <li>Outros Modelos</li>
+                </span>
             </ul>
             <ul id="li6col6" id="open-menu-querie">
-                <li>
-                    VOLKSWAGEN
-                </li><br>
-                <li>Sem resultados</li>
+                <span>
+                    <li>
+                        <button type="button">VOLKSWAGEN</button>
+                    </li>
+                    <li></li>
+                    <li>Sem resultados</li>
+                </span>
             </ul>
             <ul id="li7col1" id="open-menu-querie">
-                <li>
-                    RENAUT
-                </li><br>
-                <li>Kadjar</li>
-                <li>Megane</li>
-                <li>Captur</li>
-                <li>Clio</li>
-                <li>Grand Scenic</li>
+                <span>
+                    <li>
+                        <button type="button">RENAUT</button>
+                    </li>
+                    <li></li>
+                    <li>Kadjar</li>
+                    <li>Megane</li>
+                    <li>Captur</li>
+                    <li>Clio</li>
+                    <li>Grand Scenic</li>
+                </span>
             </ul>
             <ul id="li7col2" id="open-menu-querie">
-                <li>
-                    NISSAN
-                </li><br>
-                <li>Qashqai</li>
-                <li>X-Trail</li>
+                <span>
+                    <li>
+                       <button type="button">NISSAN</button>
+                    </li>
+                    <li></li>
+                    <li>Qashqai</li>
+                    <li>X-Trail</li>
+                </span>
             </ul>
             <ul id="li7col3" id="open-menu-querie">
-                <li>
-                    KIA
-                </li><br>
-                <li>Niro</li>
-                <li>Picanto</li>
-                <li>Sportage</li>
-                <li>Stonic</li>
+                <span>
+                    <li>
+                        <button type="button">KIA</button>
+                    </li>
+                    <li></li>
+                    <li>Niro</li>
+                    <li>Picanto</li>
+                    <li>Sportage</li>
+                    <li>Stonic</li>
+                </span>
             </ul>
             <ul id="li7col4" id="open-menu-querie">
-                <li>
-                    FORD
-                </li><br>
-                <li>Fiesta</li>
-                <li>Toumeo</li>
+                <span>
+                    <li>
+                        <button type="button">FORD</button>
+                    </li>
+                    <li></li>
+                    <li>Fiesta</li>
+                    <li>Toumeo</li>
+                </span>
             </ul>
             <ul id="li7col5" id="open-menu-querie">
-                <li>
-                    SEAT
-                </li><br>
-                <li>Ateca</li>
-                <li>Ibiza</li>
-                <li>Leon</li>
+                <span>
+                    <li>
+                        <button type="button">SEAT</button>
+                    </li>
+                    <li></li>
+                    <li>Ateca</li>
+                    <li>Ibiza</li>
+                    <li>Leon</li>
+                </span>
             </ul>
             <ul id="li7col6" class="brands" id="open-menu-querie">
-                <li>
-                    OUTRAS MARCAS
-                </li><br>
-                <li>MAZDA</li>
-                <li>HYUNDAY</li>
-                <li>JEEP</li>
-                <li>MITSUBISHI</li>
-                <li>MINI</li>
-                <li>BMW</li>
-                <li>VER TUDO</li>
+                <span>  
+                    <li>
+                        <button type="button">OUTRAS MARCAS</button>
+                    </li>  
+                    <li></li>
+                    <li>MAZDA</li>
+                    <li>HYUNDAY</li>
+                    <li>JEEP</li>
+                    <li>MITSUBISHI</li>
+                    <li>MINI</li>
+                    <li>BMW</li>
+                    <li>VER TUDO</li>
+                </span>
             </ul>
         </div>
         <ul id="footer-footer">
