--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
             <ul id="li6col3" id="open-menu-querie">
                 <span>
                     <li>
-                        <button type="button">PEUGOT USADOS</button>
+                        <button type="button">PEUGEOT USADOS</button>
                     </li>
                     <li></li>
                     <li>308</li>
@@ -556,7 +556,7 @@
                     <li>208</li>
                     <li>3008</li>
                     <li>508</li>
-                    <li>Partener</li>
+                    <li>Partner</li>
                     <li>Outros Modelos</li>
                 </span>
             </ul>
