--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <li>QUILOMOTRAGEM</li>
                 <li>LOCALIZAÇÃO</li>
                 <li>ANO</li>
-                <li>VER RESULTADOS</li>
+                <li id="result"><button type="button"> VER RESULTADOS </button></li>
                 <li>PESQUISA AVANÇADA</li>
             </ul>
         </div>
